update test method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ find_package(secureJoin REQUIRED)
 include("${OPRFSO_INSTALL_PATH}/lib/cmake/secureJoin/secureJoinTargets.cmake")
 
 include_directories(${VOLEPSI_INSTALL_PATH}/include)
-include_directories(${OPRFSO_INSTALL_PATH}/include)
+include_directories(${OPRFSO_INSTALL_PATH}/include/secureJoin)
 
 # Enable debug logging option
 option(ENABLE_DEBUG_LOG "Enable debug logging" OFF)
@@ -62,22 +62,11 @@ set(SOURCES
 )
 
 set(HEADERS
-    ${FUZZYPSI_DIR}/psi.h
-    ${FUZZYPSI_DIR}/mImt.h
-    ${FUZZYPSI_DIR}/Defines.h
-    ${FUZZYPSI_DIR}/fmap.h
-    ${MPEQT_DIR}/peqt.h
-    ${OPRFSO_DIR}/oprfso.h
-    ${MPEQT_DIR}/n1not.h
+     ${CMAKE_SOURCE_DIR}/fuzzyPSI
 )
 
-set(DEBUG_HEADER ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/debug.h)
 
-set(COMMON_SOURCES
-    ${DEBUG_HEADER}
-    ${SOURCES}
-    ${HEADERS}
-)
+set(COMMON_SOURCES ${SOURCES})
 
 
 # create executables for tests and main program
@@ -85,19 +74,14 @@ add_executable(mtest
     ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test.cpp
     ${COMMON_SOURCES}
 )
-target_include_directories(mtest PRIVATE
-    ${CMAKE_SOURCE_DIR}/fuzzyPSI
-    ${OPRFSO_INSTALL_PATH}/include/secureJoin
-)
+target_include_directories(mtest PRIVATE ${HEADERS})
 target_link_libraries(mtest PRIVATE visa::volePSI visa::secureJoin)
 
 add_executable(m_oprf_test
     ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test_oprf.cpp
     ${COMMON_SOURCES}
 )
-target_include_directories(m_oprf_test PRIVATE
-    ${CMAKE_SOURCE_DIR}/fuzzyPSI
-    ${OPRFSO_INSTALL_PATH}/include/secureJoin
+target_include_directories(m_oprf_test PRIVATE ${HEADERS}
 )
 target_link_libraries(m_oprf_test PRIVATE visa::volePSI visa::secureJoin)
 
@@ -105,36 +89,12 @@ add_executable(m_fmap_test
     ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test_fmap.cpp
     ${COMMON_SOURCES}
 )
-target_include_directories(m_fmap_test PRIVATE
-    ${CMAKE_SOURCE_DIR}/fuzzyPSI
-    ${OPRFSO_INSTALL_PATH}/include/secureJoin
-)
+target_include_directories(m_fmap_test PRIVATE ${HEADERS})
 target_link_libraries(m_fmap_test PRIVATE visa::volePSI visa::secureJoin)
 
 add_executable(main
     ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/main.cpp
     ${COMMON_SOURCES}
 )
-target_include_directories(main PRIVATE
-    ${CMAKE_SOURCE_DIR}/fuzzyPSI
-    ${OPRFSO_INSTALL_PATH}/include/secureJoin  
-)
+target_include_directories(main PRIVATE ${HEADERS})
 target_link_libraries(main PRIVATE visa::volePSI visa::secureJoin)
-
-set(ALL_TESTS mtest m_fmap_test)
-
-foreach(target IN LISTS ALL_TESTS)
-    set_target_properties(${target} PROPERTIES
-        CXX_STANDARD 20
-        CXX_STANDARD_REQUIRED ON
-        CXX_EXTENSIONS OFF
-    )
-    target_compile_options(${target} PRIVATE ${DEFAULT_COMPILER_OPTIONS_AND_WARNINGS})
-
-    target_link_libraries(${target} PRIVATE
-        visa::volePSI
-        visa::secureJoin
-    )
-
-    add_test(NAME ${target} COMMAND ${target})
-endforeach()
