--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,33 +68,59 @@ set(HEADERS
 
 set(COMMON_SOURCES ${SOURCES})
 
+# handle build options for executables
+option(BUILD_ALL "Build all executables" OFF)
+option(BUILD_MIMT "Build mtest executable" OFF)
+option(BUILD_OPRF  "Build oprf executable"  OFF)
+option(BUILD_FMAP  "Build fmap executable"  ON)
+option(BUILD_FPSI  "Build fpsi executable"  ON)
+
+if(BUILD_ALL)
+  set(BUILD_MIMT  ON)
+  set(BUILD_OPRF   ON)
+  set(BUILD_FMAP   ON)
+  set(BUILD_FPSI   ON)
+endif()
+
+message(STATUS "BUILD_MIMT=${BUILD_MIMT}")
+message(STATUS "BUILD_OPRF=${BUILD_OPRF}")
+message(STATUS "BUILD_FMAP=${BUILD_FMAP}")
+message(STATUS "BUILD_FPSI=${BUILD_FPSI}")
 
 # create executables for tests and main program
-add_executable(mtest
+
+if(BUILD_MIMT)
+    add_executable(mtest
     ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test.cpp
     ${COMMON_SOURCES}
-)
-target_include_directories(mtest PRIVATE ${HEADERS})
-target_link_libraries(mtest PRIVATE visa::volePSI visa::secureJoin)
+    )
+    target_include_directories(mtest PRIVATE ${HEADERS})
+    target_link_libraries(mtest PRIVATE visa::volePSI visa::secureJoin)
+endif()
 
-add_executable(m_oprf_test
-    ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test_oprf.cpp
-    ${COMMON_SOURCES}
-)
-target_include_directories(m_oprf_test PRIVATE ${HEADERS}
-)
-target_link_libraries(m_oprf_test PRIVATE visa::volePSI visa::secureJoin)
+if(BUILD_OPRF)
+    add_executable(oprf
+        ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test_oprf.cpp
+        ${COMMON_SOURCES}
+    )
+    target_include_directories(oprf PRIVATE ${HEADERS})
+    target_link_libraries(oprf PRIVATE visa::volePSI visa::secureJoin)
+endif()
 
-add_executable(m_fmap_test
-    ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test_fmap.cpp
-    ${COMMON_SOURCES}
-)
-target_include_directories(m_fmap_test PRIVATE ${HEADERS})
-target_link_libraries(m_fmap_test PRIVATE visa::volePSI visa::secureJoin)
+if(BUILD_FMAP)
+    add_executable(fmap
+        ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test_fmap.cpp
+        ${COMMON_SOURCES}
+    )
+    target_include_directories(fmap PRIVATE ${HEADERS})
+    target_link_libraries(fmap PRIVATE visa::volePSI visa::secureJoin)
+endif()
 
-add_executable(main
-    ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/main.cpp
-    ${COMMON_SOURCES}
-)
-target_include_directories(main PRIVATE ${HEADERS})
-target_link_libraries(main PRIVATE visa::volePSI visa::secureJoin)
+if(BUILD_FPSI)
+    add_executable(fpsi
+        ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/main.cpp
+        ${COMMON_SOURCES}
+    )
+    target_include_directories(fpsi PRIVATE ${HEADERS})
+    target_link_libraries(fpsi PRIVATE visa::volePSI visa::secureJoin)
+endif()
