--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.15)
-project(MyProj)
+project(fpsi_cmp)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_STANDARD 20)
 
 # set install paths for volePSI and secure-join
+# find volePSI and secure-join packages, and add include directories
 set(VOLEPSI_INSTALL_PATH "${CMAKE_SOURCE_DIR}/install/volepsi")
 set(OPRFSO_INSTALL_PATH "${CMAKE_SOURCE_DIR}/install/secure-join")
 
@@ -13,8 +14,7 @@ list(APPEND CMAKE_PREFIX_PATH
     "${OPRFSO_INSTALL_PATH}"
 )
 
-# find volePSI and secure-join packages, and add include directories
-find_package(volePSI REQUIRED) 
+find_package(volePSI REQUIRED)
 find_package(secureJoin REQUIRED)
 include("${OPRFSO_INSTALL_PATH}/lib/cmake/secureJoin/secureJoinTargets.cmake")
 
@@ -33,23 +33,23 @@ endif()
 
 # cmake build type and compiler options
 if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Release)
+    set(CMAKE_BUILD_TYPE Release)
 endif()
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-  add_compile_options(-fsanitize=address)
-  add_link_options(-fsanitize=address)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_compile_options(-fsanitize=address)
+    add_link_options(-fsanitize=address)
 endif()
 
-if (CMAKE_BUILD_TYPE STREQUAL "Release")
-  add_compile_options(-O3)
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    add_compile_options(-O3)
 endif()
 
 
 # set source and header files
-set(FUZZYPSI_DIR      ${CMAKE_SOURCE_DIR}/fuzzyPSI/psi)
-set(MPEQT_DIR      ${CMAKE_SOURCE_DIR}/fuzzyPSI/mPeqt)
-set(OPRFSO_DIR      ${CMAKE_SOURCE_DIR}/fuzzyPSI/oprf_so)
+set(FUZZYPSI_DIR ${CMAKE_SOURCE_DIR}/fuzzyPSI/psi)
+set(MPEQT_DIR ${CMAKE_SOURCE_DIR}/fuzzyPSI/mPeqt)
+set(OPRFSO_DIR ${CMAKE_SOURCE_DIR}/fuzzyPSI/oprf_so)
 
 set(SOURCES
     ${FUZZYPSI_DIR}/psiLinfty.cpp
@@ -59,10 +59,11 @@ set(SOURCES
     ${FUZZYPSI_DIR}/fmap.cpp
     ${MPEQT_DIR}/peqt.cpp
     ${OPRFSO_DIR}/oprfso.cpp
+    ${CMAKE_SOURCE_DIR}/fuzzyPSI/andpair/triple.cpp
 )
 
 set(HEADERS
-     ${CMAKE_SOURCE_DIR}/fuzzyPSI
+    ${CMAKE_SOURCE_DIR}/fuzzyPSI
 )
 
 
@@ -71,28 +72,33 @@ set(COMMON_SOURCES ${SOURCES})
 # handle build options for executables
 option(BUILD_ALL "Build all executables" OFF)
 option(BUILD_MIMT "Build mtest executable" OFF)
-option(BUILD_OPRF  "Build oprf executable"  OFF)
-option(BUILD_FMAP  "Build fmap executable"  ON)
-option(BUILD_FPSI  "Build fpsi executable"  ON)
+option(BUILD_OPRF "Build oprf executable" OFF)
+option(BUILD_FMAP "Build fmap executable" ON)
+option(BUILD_FPSI "Build fpsi executable" ON)
+option(BUILD_OLE "Build ole executable" ON)
+option(BUILD_ANDPAIR "Build and pair executable" ON)
 
 if(BUILD_ALL)
-  set(BUILD_MIMT  ON)
-  set(BUILD_OPRF   ON)
-  set(BUILD_FMAP   ON)
-  set(BUILD_FPSI   ON)
+    set(BUILD_MIMT ON)
+    set(BUILD_OPRF ON)
+    set(BUILD_FMAP ON)
+    set(BUILD_FPSI ON)
+    set(BUILD_OLE ON)
+    set(BUILD_ANDPAIR ON)
 endif()
 
-message(STATUS "BUILD_MIMT=${BUILD_MIMT}")
-message(STATUS "BUILD_OPRF=${BUILD_OPRF}")
-message(STATUS "BUILD_FMAP=${BUILD_FMAP}")
-message(STATUS "BUILD_FPSI=${BUILD_FPSI}")
+message(STATUS "BUILD_MIMT      =${BUILD_MIMT}")
+message(STATUS "BUILD_OPRF      =${BUILD_OPRF}")
+message(STATUS "BUILD_FMAP      =${BUILD_FMAP}")
+message(STATUS "BUILD_FPSI      =${BUILD_FPSI}")
+message(STATUS "BUILD_OLE       =${BUILD_OLE}")
+message(STATUS "BUILD_ANDPAIR   =${BUILD_ANDPAIR}")
 
 # create executables for tests and main program
-
 if(BUILD_MIMT)
     add_executable(mtest
-    ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test.cpp
-    ${COMMON_SOURCES}
+        ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test.cpp
+        ${COMMON_SOURCES}
     )
     target_include_directories(mtest PRIVATE ${HEADERS})
     target_link_libraries(mtest PRIVATE visa::volePSI visa::secureJoin)
@@ -123,4 +129,22 @@ if(BUILD_FPSI)
     )
     target_include_directories(fpsi PRIVATE ${HEADERS})
     target_link_libraries(fpsi PRIVATE visa::volePSI visa::secureJoin)
+endif()
+
+if(BUILD_OLE)
+    add_executable(ole
+        ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test_ole.cpp
+        ${COMMON_SOURCES}
+    )
+    target_include_directories(ole PRIVATE ${HEADERS})
+    target_link_libraries(ole PRIVATE visa::volePSI visa::secureJoin)
+endif()
+
+if(BUILD_ANDPAIR)
+    add_executable(andpair
+        ${CMAKE_SOURCE_DIR}/fuzzyPSI/main/test_and_pair.cpp
+        ${COMMON_SOURCES}
+    )
+    target_include_directories(andpair PRIVATE ${HEADERS})
+    target_link_libraries(andpair PRIVATE visa::volePSI visa::secureJoin)
 endif()
